--- a/myapp/templates/fastfood_detail.html
+++ b/myapp/templates/fastfood_detail.html
@@ -1,5 +1,5 @@
 
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 
 {% block title %}{{ fastfood.name }}{% endblock %}
 
@@ -15,3 +15,5 @@
     {% endfor %}
     </ul>
 {% endblock %}
+
+
