--- a/myapp/templates/caffeine_detail.html
+++ b/myapp/templates/caffeine_detail.html
@@ -1,3 +1,4 @@
+<!--caffeine_detail-->
 {% extends 'home.html' %}
 
 {% block title %}{{ caffeine.name }}{% endblock %}
@@ -7,10 +8,17 @@
     <p>{{ caffeine.description }}</p>
     <h2>Menu</h2>
     <ul>
-    {% for item in caffeine.menuitem_set.all %}
+    {% for item in menu_items %}
         <li>{{ item.name }} - {{ item.price }}</li>
     {% empty %}
         <li>No menu items found.</li>
     {% endfor %}
     </ul>
 {% endblock %}
+
+
+
+
+
+
+
