--- a/myapp/templates/restaurant_detail.html
+++ b/myapp/templates/restaurant_detail.html
@@ -3,15 +3,15 @@
 {% block title %}{{ restaurant.name }}{% endblock %}
 
 {% block content %}
-    <h1>{{ restaurant.name }}</h1>
-    <p>{{ restaurant.description }}</p>
-    <h2>Menu</h2>
+    <h1 style="color:#ffffff">{{ restaurant.name }}</h1>
+    <p style="color:#ffffff">{{ restaurant.description }}</p>
+    <h2 style="color:#ffffff">Menu</h2>
     <ul>
     {% for item in restaurant.menuitem_set.all %}
-        <img src="{{ item.image.url }}" alt="{{ item.name }}">
-        <li>{{ item.name }} - {{ item.price }}</li>
+        <img src="{{ item.image.url }}" alt="{{ item.name }}" style="color: #ffffff; font-size: 15pt;">
+        <li style="color: #ffffff; font-size: 15pt;">{{ item.name }} - {{ item.price }}</li>
     {% empty %}
-        <li>No menu items found.</li>
+        <li style="color: #ffffff; font-size: 15pt;">No menu items found.</li>
     {% endfor %}
     </ul>
 {% endblock %}
