--- a/myapp/templates/restaurant_list.html
+++ b/myapp/templates/restaurant_list.html
@@ -3,10 +3,10 @@
   {% block title %}Restaurants{% endblock %}
 
   {% block content %}
-    <h1>Restaurants</h1>
+    <h1 style="color: #ffffff; font-size: 20pt;">Restaurants</h1>
     <ul>
     {% for restaurant in restaurant %}
-        <li><a href="{{ restaurant.get_absolute_url }}">{{ restaurant.name }}</a></li>
+        <li><a href="{{ restaurant.get_absolute_url }}" style="color: #ffffff; font-size: 15pt;">{{ restaurant.name }}</a></li>
       {% empty %}
           <li>No restaurants found.</li>
       {% endfor %}
